<resources>
    <string name="app_name">Calculator App</string>
    <string name="calculator">Calculator</string>
    <string name="operation">25 + 34</string>
    <string name="c_">C</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="percent">%</string>
    <string name="opening_parenthesis">(</string>
    <string name="closing_parenthesis">)</string>
    <string name="equal">=</string>
    <string name="division">/</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="addition">+</string>
</resources>