<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/tv_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:background="@color/dark_blue"/>

    <TextView
        android:id="@+id/tv_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operation"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_below="@id/tv_navbar"
        android:paddingStart="40dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="50dp"/>

<!--    first layer -->
    <Button
        android:id="@+id/btn_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_rounded"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_rounded"
        android:layout_toEndOf="@id/btn_c"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_rounded"
        android:layout_toEndOf="@id/btn_zero"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_orange_rounded"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/btn_dot"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="5dp"
        tools:ignore="RelativeOverlap" />

    <!--    second layer -->
    <Button
        android:id="@+id/btn_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_rounded"
        android:layout_above="@id/btn_c"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_rounded"
        android:layout_above="@id/btn_zero"
        android:layout_toEndOf="@id/btn_one"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_rounded"
        android:layout_above="@id/btn_dot"
        android:layout_toEndOf="@id/btn_two"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_orange_rounded"
        android:layout_toEndOf="@id/btn_three"
        android:layout_above="@id/btn_equal"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>

    <!--    third layer -->
    <Button
        android:id="@+id/btn_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_rounded"
        android:layout_above="@id/btn_one"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_rounded"
        android:layout_above="@id/btn_two"
        android:layout_toEndOf="@id/btn_four"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_rounded"
        android:layout_above="@id/btn_three"
        android:layout_toEndOf="@id/btn_five"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_orange_rounded"
        android:layout_toEndOf="@id/btn_six"
        android:layout_above="@id/btn_division"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>

    <!--    fourth layer -->
    <Button
        android:id="@+id/btn_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_rounded"
        android:layout_above="@id/btn_four"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_rounded"
        android:layout_above="@id/btn_five"
        android:layout_toEndOf="@id/btn_seven"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_rounded"
        android:layout_above="@id/btn_six"
        android:layout_toEndOf="@id/btn_eight"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtract"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_orange_rounded"
        android:layout_toEndOf="@id/btn_nine"
        android:layout_above="@id/btn_multiply"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>

    <!--    fiftieth layer -->
    <Button
        android:id="@+id/btn_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:background="@drawable/btn_lightgray_rounded"
        android:layout_above="@id/btn_seven"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_opening_parenthesis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opening_parenthesis"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:background="@drawable/btn_lightgray_rounded"
        android:layout_above="@id/btn_eight"
        android:layout_toEndOf="@id/btn_percent"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_closing_parenthesis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closing_parenthesis"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:background="@drawable/btn_lightgray_rounded"
        android:layout_above="@id/btn_nine"
        android:layout_toEndOf="@id/btn_opening_parenthesis"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>
    <Button
        android:id="@+id/btn_addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_orange_rounded"
        android:layout_toEndOf="@id/btn_closing_parenthesis"
        android:layout_above="@id/btn_subtract"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"/>

</RelativeLayout>